test/data/semantic/bad/redefined_const.coy
const X: i64 = 0;

const X: i64 = 1;

fn main() -> () {
    ()
}
